Hitech, FSI and Manufacturing Templates - Figma aligned fixes (#45)
* Fixes - Hashout
---------

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/banner-component.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/banner-component.less
@@ -1,6 +1,6 @@
 .banner {
   .gu-banner {
-    background: url("/content/dam/guides/common-images/images/banner-cover.svg")
+    background: url("../resources/images/banner-cover.svg")
       no-repeat center center;
     background-size: cover;
     height: 576px;
